remove KGX operation
