# src/api.py
@@ -1,22 +1,17 @@
 import os
 import sys
-import subprocess
-import ast
+import logging
 import connexion
 from flask_reverse_proxy_fix.middleware import ReverseProxyPrefixFix
 from flask_cors import CORS
-import flask
-import logging
-import json
-from datetime import datetime
 
-from SPARQLWrapper import SPARQLWrapper, TURTLE, XML
-from rdflib import Graph
-from kgx import RdfTransformer, PandasTransformer
-import zipfile
-
-from kgx_transformer import KgxTransformer
 from reasonerapi_parser import reasonerapi_to_sparql, get_predicates_from_nanopubs
+
+# import flask
+# import json
+# from datetime import datetime
+# from SPARQLWrapper import SPARQLWrapper, TURTLE, XML
+# from kgx_transformer import KgxTransformer
 
 global DATA_DIR
 DATA_DIR = os.getenv('TRAPI_DATA_DIR')
@@ -75,18 +70,6 @@ def start_api(port=8808, server_url='/', debug=False):
     print("Access Swagger UI at \033[1mhttp://localhost:" + str(port) + "\033[1m 🔗")
     api.run(host='0.0.0.0', port=port, debug=debug, server=deployment_server)
 
-# def get_kgx(from_kg):
-def get_kgx():
-    """Query the Nanopubs SPARQL endpoint using CONSTRUCT queries 
-    to retrieve BioLink nodes and edges (associations)
-    Then convert the RDF to kgx TSV format
-    And return the nodes/edges files in a zip file  
-    """
-    # TODO: currently only performing it from NeuroDKG direct conversion
-    from_kg = 'NeuroDKG'
-    kgx_transformer = KgxTransformer(DATA_DIR)
-    resp = kgx_transformer.transform_rdf_to_kgx(from_kg)
-    return resp
 
 
 # def get_sparql(query, endpoint="http://ldf.nanopubs.lod.labs.vu.nl/np"):
